--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "eslint": "latest",
